--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
      <link rel="stylesheet" href="styles.css">
 
 </head>
+
+<header style="display: flex; align-items: center; justify-content: center; position: relative; padding: 10px 20px;">
+  <div style="position: absolute; left: 20px; display: flex; gap: 10px; align-items: center;">
+    <a href="https://jcduro.bexartideas.com/index.php">
+      <img src="img/logoJCDBLUE.png" width="120" style="border-radius:10%" alt="logo1">
+    <img src="img/logoJCDBLUEletras.png" width="120" style="border-radius:10%" alt="logo2">
+  </a>
+  </div>
+
+</header>
+     
 <body>
 
   <button class="btn1 cyan">Botón 1</button>
@@ -37,6 +48,7 @@
 
 </body>
 </html>
+
 
 
 
