--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
  \   | |      |   | |   | __ <  |   |  
 \___/ \____| ____/ \___/ _| \_\\___/   
                                        
-  ___|  _ \  __ \  ____|   _ )   _ _| __ \  ____|    \     ___|  
+  ___|  _ \  __ \  ____|    _ )   _ _| __ \  ____|    \     ___|  
  |     |   | |   | __|     _ \ \   |  |   | __|     _ \  \___ \  
  |     |   | |   | |      ( `  <   |  |   | |      ___ \       | 
 \____|\___/ ____/ _____| \___/\/ ___|____/ _____|_/    _\_____/  
+
+  https://jcduro.bexartideas.com/index.php | 2025 | JC Duro Code & Ideas
 
 -->
 
@@ -17,20 +19,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Botones Neón</title>
-     <link rel="stylesheet" href="styles.css">
+     <link rel="stylesheet" href="css/styles.css">
 
 </head>
-
-<header style="display: flex; align-items: center; justify-content: center; position: relative; padding: 10px 20px;">
+<header>
   <div style="position: absolute; left: 20px; display: flex; gap: 10px; align-items: center;">
     <a href="https://jcduro.bexartideas.com/index.php">
       <img src="img/logoJCDBLUE.png" width="120" style="border-radius:10%" alt="logo1">
-    <img src="img/logoJCDBLUEletras.png" width="120" style="border-radius:10%" alt="logo2">
-  </a>
+      <img src="img/logoJCDBLUEletras.png" width="120" style="border-radius:10%" alt="logo2">
+    </a>
   </div>
 
 </header>
-     
+
+
+
 <body>
 
   <button class="btn1 cyan">Botón 1</button>
@@ -48,7 +51,5 @@
 
 </body>
 </html>
-
-
 
 
